--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,13 @@ proguard/
 
 # Android Studio captures folder
 captures/
+
+# Project specific: EscapeApp
+/EscapeApp/build
+
+# Android Studio
+/EscapeApp/.gradle/
+/EscapeApp/local.properties
+/EscapeApp/build/
+/EscapeApp/captures/
+/EscapeApp/.idea/
