--- a/EscapeApp/app/src/main/AndroidManifest.xml
+++ b/EscapeApp/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".Game_B_Activity"></activity>
+        <activity android:name=".Game_B_Activity" />
+        <activity android:name=".WaitingActivity"></activity>
     </application>
 
 </manifest>
