--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ android:
     - extra-android-m2repository
 
 env:
+  - TEST_DIR=EscapeApp
   global:
     - ADB_INSTALL_TIMEOUT=8
 
@@ -18,5 +19,6 @@ before_script:
   - adb shell input keyevent 82 &
 
 script:
+  - cd $TEST_DIR
   - android list target
   - ./gradlew build connectedCheck
