--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,8 @@ android:
     - sys-img-armeabi-v7a-android-19
     - sys-img-x86-android-17
 
+before_script:
+ - chmod +x EscapeApp/gradlew
+
 script:
   - cd EscapeApp && ./gradlew build connectedCheck
