--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: android
-
 android:
-  - cd EscapeApp
-  - ./gradlew build connectedCheck
+  components:
+    - platform-tools
+    - build-tools-23.0.1
+    - android-23
+
+script:
+   - ./gradlew build connectedCheck
