--- a/EscapeApp/app/build.gradle
+++ b/EscapeApp/app/build.gradle
@@ -10,8 +10,6 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-
-        //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -19,32 +17,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    testOptions {
-        unitTests.returnDefaultValues = true
-    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-
-    //testCompile 'com.android.support.test:rules:0.5'
-    //testCompile 'com.android.support.test:runner:0.5'
-    //compile group: 'javax.inject', name: 'javax.inject', version: '1'
-
-    testCompile('com.android.support.test.espresso:espresso-intents:2.2.2') {
-        exclude group: 'javax.inject.Provider'
-        exclude module: 'support-annotations'
-    }
-
-    testCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
-        exclude group: 'javax.inject.Provider'
-        exclude module: 'support-annotations'
-    }
-
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.android.support:design:23.3.0'
-
 }
