--- a/EscapeApp/app/build.gradle
+++ b/EscapeApp/app/build.gradle
@@ -11,7 +11,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -32,15 +32,28 @@ dependencies {
     //testCompile 'com.android.support.test:runner:0.5'
     //compile group: 'javax.inject', name: 'javax.inject', version: '1'
 
-    testCompile('com.android.support.test.espresso:espresso-intents:2.2.2') {
-        exclude group: 'javax.inject.Provider'
-        exclude module: 'support-annotations'
-    }
+//    testCompile('com.android.support.test.espresso:espresso-intents:2.2.2') {
+//        exclude group: 'javax.inject.Provider'
+//        exclude module: 'support-annotations'
+//    }
+//
+//    testCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
+//        exclude group: 'javax.inject.Provider'
+//        exclude module: 'support-annotations'
+//    }
 
-    testCompile('com.android.support.test.espresso:espresso-core:2.2.2') {
-        exclude group: 'javax.inject.Provider'
-        exclude module: 'support-annotations'
-    }
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    // Set this dependency to use JUnit 4 rules
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    // Set this dependency to build and run Espresso tests
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
+    // Set this dependency to build and run UI Automator tests
+    // androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.2'
+    // Fixes resolved versions for app and test app error
+    androidTestCompile 'com.android.support:support-annotations:23.3.0'
+    // Optional -- Hamcrest library
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
 
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
