--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,13 @@ android:
     - android-21
     - sys-img-armeabi-v7a-android-21
 
+env:
+  global:
+    - TERM=dumb
+
 before_script:
- - chmod +x EscapeApp/gradlew
+ - cd EscapeApp
+ - chmod +x gradlew
 
 script:
   - ./gradlew build connectedCheck
