--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,16 @@ android:
 env:
   global:
     - TERM=dumb
+    - ADB_INSTALL_TIMEOUT=12
+    - TEST_DIR=EscapeApp
 
 before_script:
- - cd EscapeApp
- - chmod +x gradlew
+  - cd $TEST_DIR
+  - chmod +x gradlew
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
   - ./gradlew build connectedCheck
