--- a/EscapeApp/app/build.gradle
+++ b/EscapeApp/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     androidTestCompile 'com.android.support:support-annotations:23.3.0'
     // Optional -- Hamcrest library
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile group: 'com.jayway.android.robotium', name: 'robotium-solo', version: '5.5.4'
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
