--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ android:
 env:
   global:
     - TERM=dumb
-    - ADB_INSTALL_TIMEOUT=12
+    - ADB_INSTALL_TIMEOUT=8
     - TEST_DIR=EscapeApp
   matrix:
     - ANDROID_TARGET=anroid-21 ANDROID_ABI=armeabi-v7a
@@ -21,6 +21,7 @@ before_script:
   - chmod +x gradlew
   - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
