--- a/EscapeApp/app/src/main/AndroidManifest.xml
+++ b/EscapeApp/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".application.App">
+        android:name=".application.ActivityManager">
         <activity android:name=".mainscreens.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,19 +20,19 @@
         </activity>
 
         <activity
-            android:name=".minigames.Game_A_Activity"
+            android:name=".minigames.A_Code_Cracker_Pictureview"
             android:label="@string/title_activity_game__a_"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".minigames.Game_AA_Activity" />
+        <activity android:name=".minigames.A_CodeCrackerCodeview" />
 
         <service
             android:name=".network.ConnectionService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".minigames.Game_B_Activity" />
+        <activity android:name=".minigames.B_TapGame" />
         <activity android:name=".mainscreens.WaitingActivity" />
-        <activity android:name=".minigames.Game_C_Activity"></activity>
+        <activity android:name=".minigames.C_ColorSequence"></activity>
     </application>
 
 </manifest>
