--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,6 @@ before_script:
   - sleep 5
   
 script:
-  - adb shell input keyevent 82 &
-  - sleep 2
-  - ./gradlew test 
-  - adb shell input keyevent 82 &
-  - sleep 2
-  - ./gradlew build connectedCheck
+  - android list target
+  - ./gradlew test
+  - ./gradlew connectedCheck
