--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ before_script:
   - sleep 5
   
 script:
-  - android list target
-  - ./gradlew test
-  - ./gradlew connectedCheck
+  - adb shell input keyevent 82 &
+  - sleep 2
+  - ./gradlew test 
+  - adb shell input keyevent 82 &
+  - sleep 2
+  - ./gradlew build connectedCheck
