--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
     - TERM=dumb
     # Directory where the app is located
     - TEST_DIR=EscapeApp
+matrix:
+    - ANDROID_TARGET=anroid-21 ANDROID_ABI=armeabi-v7a
 
 before_script:
   # change directory to wherever the App is located
@@ -34,6 +36,6 @@ script:
   - adb shell input keyevent 82 &
   - sleep 2
   - ./gradlew test 
-  - adb shell input keyevent 82 &
-  - sleep 2
+  #- adb shell input keyevent 82 &
+  #- sleep 2
   - ./gradlew build connectedCheck
