--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ script:
   - adb shell input keyevent 82 &
   - sleep 2
   - ./gradlew test 
-  #- adb shell input keyevent 82 &
-  #- sleep 2
+  
+  - adb shell input keyevent 82 &
+  - sleep 2
   - ./gradlew build connectedCheck
