--- a/EscapeApp/app/src/main/AndroidManifest.xml
+++ b/EscapeApp/app/src/main/AndroidManifest.xml
@@ -5,12 +5,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".application.ActivityManager"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".application.ActivityManager">
+        android:theme="@style/AppTheme">
         <activity android:name=".mainscreens.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".minigames.A_Code_Cracker_Pictureview"
             android:label="@string/title_activity_game__a_"
@@ -32,8 +31,9 @@
 
         <activity android:name=".minigames.B_TapGame" />
         <activity android:name=".mainscreens.WaitingActivity" />
-        <activity android:name=".minigames.C_ColorSequence"></activity>
-        <activity android:name=".minigames.D_Gyroscope"></activity>
+        <activity android:name=".minigames.C_ColorSequence" />
+        <activity android:name=".minigames.D_Gyroscope" />
+        <activity android:name=".minigames.E_Squasher"></activity>
     </application>
 
 </manifest>
