--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
   # give gradlew script exec permissions
   - chmod a+x gradlew
   # we don't want to setup a custom virtual device
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a  --skin WVGA800
   # run the emulator
   - emulator -avd test -no-skin -no-audio -no-window &
   # wait for the emulator to boot
