--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ script:
 
 after_script:
   - ./gradlew pmd
-  - echo "== PMD_RESULT =="; cat $TEST_DIR/app/build/reports/pmd/pmd.html echo "== END_PMD_RESULT =="
+  - echo "== PMD_RESULT =="; cat app/build/reports/pmd/pmd.html echo "== END_PMD_RESULT =="
   - ./gradlew checkstyle
   - ./gradlew findbugs 
-  - echo "== FINDBUGS_RESULT =="; $TEST_DIR/app/build/reports/findbugs/findbugs.html echo "== END_FINDBUGS_RESULT =="
+  - echo "== FINDBUGS_RESULT =="; cat app/build/reports/findbugs/findbugs.html echo "== END_FINDBUGS_RESULT =="
