add minigame B setup

--- a/EscapeApp/app/src/main/AndroidManifest.xml
+++ b/EscapeApp/app/src/main/AndroidManifest.xml
@@ -33,7 +33,11 @@
         <activity android:name=".mainscreens.WaitingActivity" />
         <activity android:name=".minigames.C_ColorSequence" />
         <activity android:name=".minigames.D_Gyroscope" />
-        <activity android:name=".minigames.E_Squasher"></activity>
+        <activity android:name=".minigames.E_Squasher"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
