Refactor minigame F to minigame D

--- a/EscapeApp/app/src/main/AndroidManifest.xml
+++ b/EscapeApp/app/src/main/AndroidManifest.xml
@@ -32,9 +32,9 @@
         <activity android:name=".minigames.B_TapGame" />
         <activity android:name=".mainscreens.WaitingActivity" />
         <activity android:name=".minigames.C_ColorSequence" />
-        <activity android:name=".minigames.D_Gyroscope" />
+        <activity android:name=".minigames.Waiting_Gyroscope" />
         <activity android:name=".minigames.E_Squasher" />
-        <activity android:name=".minigames.F_Lock"></activity>
+        <activity android:name=".minigames.D_Lock"></activity>
     </application>
 
 </manifest>
