--- a/EscapeApp/app/src/main/AndroidManifest.xml
+++ b/EscapeApp/app/src/main/AndroidManifest.xml
@@ -34,7 +34,9 @@
         <activity android:name=".minigames.C_ColorSequence" />
         <activity android:name=".minigames.Waiting_Gyroscope" />
         <activity android:name=".minigames.E_Squasher" />
-        <activity android:name=".minigames.D_Lock"></activity>
+        <activity android:name=".minigames.D_Lock" />
+        <activity android:name=".mainscreens.GameOver" />
+        <activity android:name=".mainscreens.GameWon"></activity>
     </application>
 
 </manifest>
