add Waiting_Squasher to the waiting activity
Waiting activity now has two buttons. one activates the coin game and
the other activates the squasher game. if the player squashes 100 bugs a
bonus is sent to the host. the message sent is the same as the message
sent by the gyroscope game.

--- a/EscapeApp/app/src/main/AndroidManifest.xml
+++ b/EscapeApp/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name=".mainscreens.WaitingActivity" />
         <activity android:name=".minigames.C_ColorSequence" />
         <activity android:name=".minigames.Waiting_Gyroscope" />
-        <activity android:name=".minigames.E_Squasher" />
+        <activity android:name=".minigames.Waiting_Squasher" />
         <activity android:name=".minigames.D_Lock"></activity>
     </application>
 
